PEL -- Pragmatic Emacs Leap --  NEWS         -*- org -*-

* Changes since version 0.3.1:
** New Features and Improvements:
- New: PEL now provides 2 operation modes: the normal Emacs mode of operation
  and the new **fast-startup** setup.  In the fast-startup setup, Emacs init startup
  time is reduced further by bundling all single directory external packages
  inside a single directory.  Use the **pel-setup-fast** command to activate
  the fast startup setup.  Use the **pel-setup-normal** command to restore
  Emacs standard environment.  Use the fast startup setup when you want to use
  a large number of external packages and want to reduce Emacs startup time
  more than what can be done otherwise.
- New: explicit support for Emacs ≥ 27 package quickstart feature that is
  aware of PEL fast-startup mode and PEL's ability to deal with 2 independent
  customization files (one for Emacs in terminal mode and another for Emacs
  running in graphics mode).  The *pel-setup-with-quickstart* command (bound
  to ``<f11> M-S q``) activates package quickstart or refresh the
  package-quickstart file(s) if already present.  The
  *pel-setup-no-quickstart* (bound to ``<f11> M_S M-q``) disables package
  quickstart.
- New: PEL now provides *customization-driven package management*.
  It installs packages identified by the ``pel-use-`` user-option when the
  *pel-init* command is issued and some of the requested packages are missing.
  And it deactivates packages that are not required  y these user-options when
  you execute the ``pel-cleanup`` command.
  - PEL no longer depends on the [[https://github.com/jwiegley/use-package][use-package]] external package to install
    other external packages. PEL now provides all the logic it requires on top
    of the built-in package library to install external packages.  This
    simplifies the PEL installation procedure and allows byte-compiling all of
    PEL without requiring any external package.  PEL will download and install